# aoutools

./: .envrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  setup.py
.claude/: settings.json
.claude/agents/: prs-correctness-reviewer.md
.claude/skills/release/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
aoutools/: __init__.py  _workbench.py
aoutools/_utils/: helpers.py
aoutools/data/: prs_weights_header.csv  prs_weights_noheader.csv  prs_weights_noheader2.csv  prs_weights_noheader2.tsv
aoutools/prs/: __init__.py  _calculator.py  _calculator_batch.py  _calculator_multi_split.py  _calculator_split_multi.py  _calculator_utils.py  _config.py  _downloader.py  _reader.py  _utils.py  _workflow.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  prs.rst  scoring_method.rst
docs/source/_static/: custom.css
docs/source/api/: index.rst  prs.rst  workbench.rst
docs/source/guides/: calculating_pgs.rst  calculating_prs.rst  downloading_pgs_scores.rst  index.rst
notebooks/: README.md  benchmark_scoring_speed.ipynb  measure_minrep_locus_shift.ipynb  validate_public_api_on_aou.ipynb  validate_scoring_on_aou.ipynb  validate_synthetic_control_on_aou.ipynb  verify_hom_ref_dosage.ipynb  verify_split_multi_downcoding.ipynb
tests/: README.md
tests/integration/: conftest.py  test_allele_matching.py  test_chunking.py  test_reader_parsing.py
tests/prs/: conftest.py  test_calculator.py  test_calculator_batch.py  test_calculator_utils.py  test_config.py  test_downloader.py  test_reader.py  test_util.py  test_workbench.py  test_workflow.py
