# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoutools"
version = "0.1.0"
authors = [
  { name="Jaehyun Joo", email="jaehyunjoo@outlook.com" },
]
description = "A library of tools for analyzing All of Us data."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["all-of-us", "genomics", "bioinformatics", "prs", "hail"]

# This field now points directly to your LICENSE file.
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "hail",
    "pandas",
    "pgscatalog.core",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/dokyoonkimlab/aoutools"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
aoutools = { path = ".", editable = true }

[tool.pixi.tasks]
docs = "make -C docs html"
undocs = "make -C docs clean"

[tool.pixi.dependencies]
# Don't need hail in local as testing will be performed on AoU Workbench
python = "3.11.*"
pandas = ">=2.3.1,<3"
"pgscatalog.core" = ">=1.0.1,<2"
sphinx = ">=8.2.3,<9"
sphinx-autodoc-typehints = ">=3.2.0,<4"
mypy = ">=1.17.1,<2"
furo = ">=2024.8.6,<2025"
tqdm = ">=4.67.1,<5"
