# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoutools"
version = "0.1.2"
authors = [
  { name="Jaehyun Joo", email="jaehyunjoo@outlook.com" },
]
description = "A library of tools for analyzing All of Us data."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["all-of-us", "genomics", "bioinformatics", "prs", "hail"]

# This field now points directly to your LICENSE file.
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# Note: `hail` is a runtime requirement but is intentionally NOT listed here.
# It is provided by the All of Us Workbench / Hail Spark environment, ships no
# wheel for some platforms (e.g. osx-arm64), and pins numpy/pandas tightly, so
# co-installing it as a hard dependency is neither possible nor desirable. CI
# installs a pinned hail explicitly (see the pixi `ci` feature below).
dependencies = [
    "pandas>=2.2",
    "google-cloud-storage>=2.13",
    "packaging",
]

# Optional dependencies for downloader functionality
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/dokyoonkimlab/aoutools"
Repository = "https://github.com/dokyoonkimlab/aoutools"
Issues = "https://github.com/dokyoonkimlab/aoutools/issues"
Documentation = "https://aoutools.readthedocs.io"

[tool.setuptools.package-data]
aoutools = ["data/*"]

# Ruff is both the formatter and the linter. 80 cols matches the wrapping the
# codebase already uses.
[tool.ruff]
line-length = 80

[tool.ruff.lint]
# E/W: pycodestyle. F: real errors (undefined names, unused imports).
# I: import sorting. UP: pyupgrade (safe — requires-python is >=3.10).
# B: bugbear (mutable/shared default args, zip() without strict=, ...).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Sphinx's conf.py must call sys.path.insert() before importing, which is
# exactly what E402 (module-import-not-at-top-of-file) complains about.
"docs/source/conf.py" = ["E402"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
aoutools = { path = ".", editable = true }

[tool.pixi.tasks]
docs = "make -C docs html"
undocs = "make -C docs clean"
# The two tiers answer different questions and are kept apart. `test` is the
# fast mocked suite (tests/prs); `test-integration` runs real hail against a
# mock VDS (tests/integration) and needs the `integration` env for a JVM.
test = "pytest -v -m 'not integration'"
test-integration = "pytest -v -m integration"
# One-time per clone, after `pixi install`: install the git pre-commit hook.
setup-hooks = "pre-commit install"

# Runtime dependencies only.
# Versions are aligned to the All of Us Researcher Workbench genomics runtime:
# Python 3.11 and google-cloud-storage 2.13.x (observed on the Workbench image),
# with pandas kept compatible with hail 0.2.135, which requires numpy>=2,<3 and
# therefore pandas>=2.2.
[tool.pixi.dependencies]
python = "3.11.*"
pandas = ">=2.2,<3"
google-cloud-storage = ">=2.13,<3"

# Development dependencies
[tool.pixi.feature.dev.dependencies]
sphinx = ">=8.2.3,<9"
sphinx-autodoc-typehints = ">=3.2.0,<4"
furo = ">=2024.8.6,<2025"
pytest = ">=8.4.1,<9"
pytest-mock = ">=3.14.1,<4"
python-build = ">=1.3.0,<2"
twine = ">=6.1.0,<7"
pre-commit = ">=4,<5"

# Lean feature for the CI lint job: ruff and nothing else, so linting doesn't
# pay for sphinx/twine. Config lives in [tool.ruff] above. The `default`
# env also pulls this feature in, so `pixi run lint` works locally and the task
# has a single definition.
[tool.pixi.feature.lint.dependencies]
ruff = ">=0.14,<0.15"

[tool.pixi.feature.lint.tasks]
# `lint` is what CI runs, so it must not modify files.
lint = "ruff check . && ruff format --check ."
format = "ruff format . && ruff check --fix ."

# CI feature: the test suite mocks hail but still needs it importable, so the
# real library is installed. hail is pinned to the version used on the AoU
# Workbench and only installed on linux-64 (no osx-arm64 wheel exists); a JDK is
# provided for its (unused-in-tests) local Spark backend.
[tool.pixi.feature.ci.dependencies]
pytest = ">=8.4.1,<9"
pytest-mock = ">=3.14.1,<4"

# Pinned to the exact versions present on the AoU Workbench Hail runtime so CI
# is a faithful mirror of the environment researchers actually run. These come
# from the Workbench `pip freeze`; hail's own metadata confirms they are a
# mutually-compatible set.
[tool.pixi.feature.ci.target.linux-64.pypi-dependencies]
hail = "==0.2.135"
pyspark = "==3.5.3"
parsimonious = "==0.10.0"
scipy = "==1.13.1"
pyarrow = "==23.0.1"

[tool.pixi.feature.ci.target.linux-64.dependencies]
openjdk = "11.*"
# numpy/pandas/google-cloud-storage are conda-provided; pinned exact to the
# Workbench versions (these intersect with the looser runtime pins above).
numpy = "==2.0.2"
pandas = "==2.3.0"
google-cloud-storage = "==2.13.0"

# Integration feature: unlike `ci`, this one actually *runs* hail. It starts a
# local Spark backend, builds a mock VDS and scores it, so the allele-matching
# logic is validated for real rather than against a MagicMock.
#
# hail is taken from PyPI, not conda: the conda package is linux-64 only, but the
# PyPI distribution is a single `py3-none-any` wheel bundling hail-all-spark.jar,
# so it installs on osx-arm64 too given a JVM. That is the whole reason this tier
# can run on a Mac while the `ci` env cannot.
[tool.pixi.feature.integration.dependencies]
openjdk = "11.*"
pytest = ">=8.4.1,<9"

[tool.pixi.feature.integration.pypi-dependencies]
hail = "==0.2.135"

# Default is the dev environment; ci is a lean linux-64 environment for the
# mocked tests; integration runs real hail on both platforms; lint is a
# ruff-only environment for the CI lint job.
[tool.pixi.environments]
default = { features = ["dev", "lint"], solve-group = "default" }
ci = { features = ["ci"] }
integration = { features = ["integration"] }
lint = { features = ["lint"], no-default-feature = true }

[tool.pytest.ini_options]
markers = [
    "integration: runs against a real hail Spark backend (slow, needs a JVM)",
]
